# Fused-Gather-GEMM-Scatter-Kernels

./: .gitattributes  .gitignore  CITATION.bib  LICENSE  README.md  pyproject.toml  repro_environment.txt  requirements.txt
experiments/phase3/: benchmark_hard_problems.py  benchmark_torsion.py  bf16_extended_study.py  capture_cg_residuals.py  cpu_baseline_comparison.py  determinism_study.py  energy_benchmark.py  fully_converged_study.py  kappa_estimation.py  ncu_profile.py  profile_matfree_hotpath.py  scaling_ladder.py  statistical_repeats.py  test_bf16_ir.py  test_bf16_kernel.py  test_fused_kernel.py  verify_galerkin_kc.py
scripts/: estimate_condition_numbers.py  generate_topology_renders.py  plot_phase3_figures.py  probe_vram.py
src/gpu_fem/: __init__.py  agents.py  auto_simp.py  cli.py  local_agents.py  paths.py  presets.py  pub_baseline_controller.py  simp_gpu.py  solver_v2.py  surrogate_gpu.py  workflow.py
